...
                                Image(systemName: "moon.stars.circle.fill")
                                    .font(.title3.weight(.semibold))
                                Text("Create My Profile")
                                    .font(.title3.weight(.semibold))
                            } else {
                                let buttonText = currentStep == 0 ? "Begin Journey" : 
                                                currentStep == 4 ? (birthPlace.isEmpty ? "Skip for Now" : "Continue") : 
                                                "Continue"
                                Text(buttonText)
                                    .font(.title3.weight(.semibold))
                                Image(systemName: currentStep == 4 && birthPlace.isEmpty ? "arrow.forward.square.fill" : "arrow.right.circle.fill")
                                    .font(.title3.weight(.semibold))
                            }
...
